Fixed footer gap for phpBB.
git-svn-id: https://vassalengine.svn.sourceforge.net/svnroot/vassalengine/site-src/trunk@5229 67b53d14-2c14-4ace-a08f-0dab2b34000c

--- a/css/site.css
+++ b/css/site.css
@@ -74,8 +74,8 @@
 
 #vassal-footer {
   clear: both;
-  margin: 4em 0;
-  padding: 10px 0 0 0;
+  margin: 4em 0 0 0;
+  padding: 10px 0 4em 0;
   border-top: 1px solid black;
   color: #222222;
   font-size: 9pt;
